--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
 .header-color{
-    background: #DA4453;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #89216B, #DA4453);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #89216B, #DA4453); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: #4776E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .landing-grid {
-    background: #DA4453;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #89216B, #DA4453);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #89216B, #DA4453); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #4776E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #8E54E9, #4776E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #8E54E9, #4776E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+a:hover{
+    font-weight: bold;
+    font-size: 17px;
 }
 
 .projects-grid{
@@ -54,15 +57,16 @@
 
 .social-links{
     display: flex;
-    justify-content: space-between;
-    width: 17%;
-    margin: auto;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .social-links i{
+    display: flex;
     color: white;
     font-size: 5em;
-    padding: 8px;
+    padding: 0.2em;
 }
 
 /* Contact Page */
@@ -110,20 +114,31 @@
 /* Resume Page */
 
 .resume-right-col{
-    background: #27221F;
     color: white;
     padding: 2em;
+    background: #948E99;
+    background: -webkit-linear-gradient(to top, #2E1437, #948E99);
+    background: linear-gradient(to top, #2E1437, #948E99);
 }
 
 /* About Me Page */
 
-.about-me{
+/* .about-me{
     width: 100%;
     display: block;
     text-align: center;
 }
+*/
+.about-me p{
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 150%;
+}
 
-.about-me h4{
+/* Projects Page --in progress */
+
+.projects-comming-soon{
     width: 100%;
     display: block;
     text-align: center;
